Add specific CSCs to EAS deployment.

--- a/kafka-producers/templates/deployment_eas.yaml
+++ b/kafka-producers/templates/deployment_eas.yaml
@@ -35,5 +35,5 @@ spec:
             - name: LOG_LEVEL
               value: "{{ .Values.env.log_level }}"
             - name: CSC_LIST
-              value: "{{ .Values.env.csc_list }}"
+              value: "DSM"
 
