--- a/dsm/Chart.yaml
+++ b/dsm/Chart.yaml
@@ -1,6 +1,4 @@
 apiVersion: v1
 name: dsm
-description: A Helm chart for Kubernetes
-
-type: application
+description: A Helm chart for deploying the Dome Seeing Monitor CSC.
 version: 0.1.0
