--- a/kafka-producers/Chart.yaml
+++ b/kafka-producers/Chart.yaml
@@ -1,6 +1,4 @@
 apiVersion: v1
 name: kafka-producers
-description: A Helm chart for Kubernetes
-
-type: application
+description: A Helm chart for deploying the Kafka producers.
 version: 0.1.0
