Expand CSC list for EAS kafka deployment.

--- a/kafka-producers/templates/deployment_eas.yaml
+++ b/kafka-producers/templates/deployment_eas.yaml
@@ -29,5 +29,5 @@ spec:
               {{- end }}
             {{- include "kafka-producers.env-boilerplate" . | nindent 12 }}
             - name: CSC_LIST 
-              value: "DSM"
+              value: "DIMM DSM Environment"
 
