Add partition environment variable for later use.

--- a/kafka-producers/values.yaml
+++ b/kafka-producers/values.yaml
@@ -14,5 +14,6 @@ env:
   brokerIp: kafka-0-tucson-teststand-efd.lsst.codes
   brokerPort: 31090
   registryAddr: https://schema-registry-tucson-teststand-efd.lsst.codes
+  partitions: 1
   replication: 3
   logLevel: 10
