Add Scheduler to obssys producer.

--- a/kafka-producers/templates/deployment_obssys.yaml
+++ b/kafka-producers/templates/deployment_obssys.yaml
@@ -27,5 +27,5 @@ spec:
               {{- end }}
             {{- include "kafka-producers.env-boilerplate" . | nindent 12 }}
             - name: CSC_LIST 
-              value: "GenericCamera Script ScriptQueue Watcher"
+              value: "GenericCamera Scheduler Script ScriptQueue Watcher"
 
