Move producer CSC list to configuration.

--- a/kafka-producers/templates/deployment_m2.yaml
+++ b/kafka-producers/templates/deployment_m2.yaml
@@ -33,5 +33,5 @@ spec:
               {{- end }}
             {{- include "kafka-producers.env-boilerplate" . | nindent 12 }}
             - name: CSC_LIST 
-              value: "Hexapod MTM2 Rotator"
+              value: {{ .Values.cscs.m2 | quote }}
 
