--- a/kafka-producers/templates/deployment_test.yaml
+++ b/kafka-producers/templates/deployment_test.yaml
@@ -33,5 +33,5 @@ spec:
               {{- end }}
             {{- include "kafka-producers.env-boilerplate" . | nindent 12 }}
             - name: CSC_LIST
-              value: "Test"
+              value: {{ .Values.cscs.test | quote }}
 
