--- a/kafka-producers/templates/deployment_auxtel.yaml
+++ b/kafka-producers/templates/deployment_auxtel.yaml
@@ -33,5 +33,5 @@ spec:
               {{- end }}
             {{- include "kafka-producers.env-boilerplate" . | nindent 12 }}
             - name: CSC_LIST 
-              value: "ATAOS ATDome ATDomeTrajectory ATHexapod ATPneumatics ATPtg ATMCS"
+              value: {{ .Values.cscs.auxtel | quote }}
 
