--- a/kafka-producers/templates/deployment_eas.yaml
+++ b/kafka-producers/templates/deployment_eas.yaml
@@ -33,5 +33,5 @@ spec:
               {{- end }}
             {{- include "kafka-producers.env-boilerplate" . | nindent 12 }}
             - name: CSC_LIST 
-              value: "DIMM DSM Environment"
+              value: {{ .Values.cscs.eas | quote }}
 
