--- a/kafka-producers/templates/deployment_latiss.yaml
+++ b/kafka-producers/templates/deployment_latiss.yaml
@@ -33,5 +33,5 @@ spec:
               {{- end }}
             {{- include "kafka-producers.env-boilerplate" . | nindent 12 }}
             - name: CSC_LIST 
-              value: "ATArchiver ATCamera ATHeaderService ATSpectrograph"
+              value: {{ .Values.cscs.latiss | quote }}
 
