--- a/kafka-producers/templates/deployment_m1m3.yaml
+++ b/kafka-producers/templates/deployment_m1m3.yaml
@@ -33,5 +33,5 @@ spec:
               {{- end }}
             {{- include "kafka-producers.env-boilerplate" . | nindent 12 }}
             - name: CSC_LIST 
-              value: "MTM1M3 MTVMS"
+              value: {{ .Values.cscs.m1m3 | quote }}
 
