--- a/kafka-producers/values.yaml
+++ b/kafka-producers/values.yaml
@@ -20,3 +20,41 @@ env:
   partitions: 1
   replication: 3
   logLevel: 10
+
+cscs:
+  auxtel: >-
+    ATAOS
+    ATDome
+    ATDomeTrajectory
+    ATHexapod
+    ATPneumatics
+    ATPtg
+    ATMCS
+  comcam: >-
+    CCArchiver
+    CCCamera
+    CCHeaderService
+  eas: >-
+    DIMM
+    DSM
+    Environment
+  latiss: >-
+    ATArchiver
+    ATCamera
+    ATHeaderService
+    ATSpectrograph
+  m1m3: >-
+    MTM1M3
+    MTVMS
+  m2: >-
+    Hexapod
+    MTM2
+    Rotator
+  obssys: >-
+    GenericCamera
+    Scheduler
+    Script
+    ScriptQueue
+    Watcher
+  test: >-
+    Test 
