Use correct API attribute for Job.

--- a/csc/templates/deployment.yaml
+++ b/csc/templates/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ .Release.Name }}
   {{- include "multicast.annotation" . | nindent 2 }}
 spec:
-  replicas: 1
+  completions: 1
   template:
     metadata:
       {{- include "multicast.annotation" . | nindent 6 }}
