--- a/csc/templates/vault-secret.yaml
+++ b/csc/templates/vault-secret.yaml
@@ -1,4 +1,4 @@
-{{- if kasKey .Values.image "useNexus3" }}
+{{- if hasKey .Values.image "useNexus3" }}
 apiVersion: ricoberger.de/v1alpha1
 kind: VaultSecret
 metadata:
