Fix secret name.

--- a/csc/templates/vault-secret.yaml
+++ b/csc/templates/vault-secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: ricoberger.de/v1alpha1
 kind: VaultSecret
 metadata:
-  name: {{ $.Release.Name }}-vault-secret
+  name: nexus3-docker
 spec:
   {{- if eq $.Values.deployEnv "base" }}
   path: secret/k8s_operator/base-lsp.lsst.codes/ts/software/nexus3-docker
