Update csc chart.

--- a/csc/templates/vault-secret.yaml
+++ b/csc/templates/vault-secret.yaml
@@ -11,5 +11,5 @@ spec:
   {{- else }}
   path: secret/dm/square/efd/{{ $.Values.deployEnv }}/nexus3-docker
   {{- end }}
-  type: Opaque
+  type: kubernetes.io/dockerconfigjson
 {{- end }}
