Add namespace to VaultSecret.

--- a/csc/templates/vault-secret.yaml
+++ b/csc/templates/vault-secret.yaml
@@ -3,6 +3,7 @@ apiVersion: ricoberger.de/v1alpha1
 kind: VaultSecret
 metadata:
   name: nexus3-docker
+  namespace: {{ $.Release.Namespace }}
 spec:
   {{- if eq $.Values.deployEnv "base" }}
   path: secret/k8s_operator/base-lsp.lsst.codes/ts/software/nexus3-docker
@@ -11,5 +12,5 @@ spec:
   {{- else }}
   path: secret/dm/square/efd/{{ $.Values.deployEnv }}/nexus3-docker
   {{- end }}
-  type: kubernetes.io/dockerconfigjson
+  type: Opaque
 {{- end }}
