Handle NCSA secret management.

--- a/csc/templates/vault-secret.yaml
+++ b/csc/templates/vault-secret.yaml
@@ -9,6 +9,10 @@ spec:
   path: secret/k8s_operator/base-lsp.lsst.codes/ts/software/nexus3-docker
   {{- else if eq $.Values.deployEnv "summit" }}
   path: secret/k8s_operator/summit-lsp.lsst.codes/ts/software/nexus3-docker
+  {{- else if eq $.Values.deployEnv "ncsa-teststand" }}
+  path: secret/k8s_operator/lsp-nts-k8s.ncsa.illinois.edu/ts/software/nexus3-docker
+  {{- else if eq $.Values.deployEnv "ncsa-lsp-int" }}
+  path: secret/k8s_operator/lsst-lsp-int.ncsa.illinois.edu/ts/software/nexus3-docker
   {{- else }}
   path: secret/dm/square/efd/{{ $.Values.deployEnv }}/nexus3-docker
   {{- end }}
