Remove CSC lists from default values.yaml.

--- a/kafka-producers/values-separate-dds-domain.yaml
+++ b/kafka-producers/values-separate-dds-domain.yaml
@@ -2,6 +2,12 @@ producers:
   eas:
     env:
       lsstDdsDomain: eas
+    cscs: >-
+      DIMM
+      DSM
+      Environment
   test:
     env:
       lsstDdsDomain: test
+    cscs: >-
+      Test
