Use template for OSPL config file.

--- a/ospl-config/templates/ospl-configmap.yaml
+++ b/ospl-config/templates/ospl-configmap.yaml
@@ -7,5 +7,5 @@ metadata:
   namespace: {{ $namespace }}
 data:
   ospl.xml:
-{{ $.Values.osplConfig | toYaml | indent 4 }}
+{{ include "ospl-config.xml" $ | toYaml | indent 4 }}
 {{- end }}
