--- a/csc/templates/deployment.yaml
+++ b/csc/templates/deployment.yaml
@@ -1,5 +1,5 @@
 apiVersion: batch/v1
-kind: Job
+kind: {{ .Values.apiType | default "Job" }}
 metadata:
   name: {{ .Release.Name }}
   {{- include "multicast.annotation" . | nindent 2 }}
