--- a/csc/values-dsm1-nexus3.yaml
+++ b/csc/values-dsm1-nexus3.yaml
@@ -2,7 +2,7 @@ image:
   repository: ts-dockerhub.lsst.org/dsm
   tag: b42
   pullPolicy: IfNotPresent
-  useNexus3: true
+  nexus3: nexus3-docker
 
 env:
   LSST_DDS_DOMAIN: citest
