Change restart policy to avoid making new pods on failure.

--- a/csc/templates/deployment.yaml
+++ b/csc/templates/deployment.yaml
@@ -56,7 +56,7 @@ spec:
           peristentVolumeClaim:
             claimName: {{ .Release.Name }}-pvc
       {{- end }}
-      restartPolicy: Never
+      restartPolicy: OnFailure
       {{- if .Values.image.nexus3 }}
       imagePullSecrets:
         - name: {{ $.Values.namespace }}-{{ $.Values.image.nexus3 }}
