--- a/csc/templates/deployment.yaml
+++ b/csc/templates/deployment.yaml
@@ -1,13 +1,27 @@
+{{- $apiType := .Values.apiType | default "Job" }}
+{{- if eq $apiType "Deployment" }}
+apiVersion: apps/v1
+{{- else }}
 apiVersion: batch/v1
-kind: {{ .Values.apiType | default "Job" }}
+{{- end }}
+kind: {{ $apiType }}
 metadata:
   name: {{ .Release.Name }}
   namespace: {{ .Values.namespace }}
   {{- include "multicast.annotation" . | nindent 2 }}
 spec:
   completions: 1
+  {{- if eq $apiType "Deployment" }}
+  selector:
+    matchLabels:
+      app.kubernetes.io/instance: {{ $.Release.Name }}
+  {{- end }}
   template:
     metadata:
+      labels:
+      {{- if eq $apiType "Deployment" }}
+        app.kubernetes.io/instance: {{ $.Release.Name }}
+      {{- end }}
       {{- include "multicast.annotation" . | nindent 6 }}
     spec:
       containers:
@@ -56,7 +70,9 @@ spec:
           peristentVolumeClaim:
             claimName: {{ .Release.Name }}-pvc
       {{- end }}
+      {{- if eq $apiType "Job" }}
       restartPolicy: OnFailure
+      {{- end }}
       {{- if .Values.image.nexus3 }}
       imagePullSecrets:
         - name: {{ $.Values.namespace }}-{{ $.Values.image.nexus3 }}
