Add WAIT_ACK env var.

--- a/kafka-producers/templates/deployment.yaml
+++ b/kafka-producers/templates/deployment.yaml
@@ -64,6 +64,12 @@ spec:
               {{- else }}
               value: {{ $.Values.env.replication | quote }}
               {{- end }}
+            - name: WAIT_ACK
+              {{- if .env }}
+              value: {{ .env.waitAck | default $.Values.env.waitAck | quote }}
+              {{- else }}
+              value: {{ $.Values.env.waitAck | quote }}
+              {{- end }}
             - name: LOG_LEVEL
               {{- if .env }}
               value: {{ .env.partitions | default $.Values.env.logLevel | quote }}
