--- a/kafka-producers/values.yaml
+++ b/kafka-producers/values.yaml
@@ -11,6 +11,7 @@ env:
   brokerIp: kafka-0-tucson-teststand-efd.lsst.codes
   brokerPort: 31090
   registryAddr: https://schema-registry-tucson-teststand-efd.lsst.codes
+  waitAck: 1
   partitions: 1
   replication: 3
   logLevel: 10
