Fix override bugs.

--- a/kafka-producers/values-run-different.yaml
+++ b/kafka-producers/values-run-different.yaml
@@ -6,6 +6,8 @@ producers:
     env:
       partitions: 3
       waitAck: all
+      replication: 10
+      logLevel: 50
     cscs: >-
       ATPtg
       ATDome
