--- a/kafka-producers/templates/deployment.yaml
+++ b/kafka-producers/templates/deployment.yaml
@@ -60,7 +60,7 @@ spec:
               {{- end }}
             - name: REPLICATION
               {{- if .env }}
-              value: {{ .env.partitions | default $.Values.env.replication | quote }}
+              value: {{ .env.replication | default $.Values.env.replication | quote }}
               {{- else }}
               value: {{ $.Values.env.replication | quote }}
               {{- end }}
@@ -72,7 +72,7 @@ spec:
               {{- end }}
             - name: LOG_LEVEL
               {{- if .env }}
-              value: {{ .env.partitions | default $.Values.env.logLevel | quote }}
+              value: {{ .env.logLevel | default $.Values.env.logLevel | quote }}
               {{- else }}
               value: {{ $.Values.env.logLevel | quote }}
               {{- end }}
