Add host policies to kafka-producer and csc charts.

--- a/csc/templates/job.yaml
+++ b/csc/templates/job.yaml
@@ -69,3 +69,5 @@ spec:
       imagePullSecrets:
         - name: {{ $.Values.namespace }}-{{ $.Values.image.nexus3 }}
       {{- end }}
+      hostIPC: {{ $.Values.useHostIpc | default true }}
+      hostPID: {{ $.Values.useHostPid | default true }}
