--- a/kafka-producers/templates/deployment.yaml
+++ b/kafka-producers/templates/deployment.yaml
@@ -93,4 +93,6 @@ spec:
       imagePullSecrets:
         - name: {{ $.Values.namespace }}-{{ $.Values.image.nexus3 }}
       {{- end }}
+      hostIPC: {{ $.Values.useHostIpc | default true }}
+      hostPID: {{ $.Values.useHostPid | default true }}
 {{ end }}
