--- a/ospl-daemon/templates/daemonset.yaml
+++ b/ospl-daemon/templates/daemonset.yaml
@@ -42,7 +42,7 @@ spec:
                 path: ospl.xml
         - name: osplshmem
           hostPath:
-            path: /tmp/osplshmem
+            path: {{ .Values.shmemDir }}
             type: DirectoryOrCreate
       {{- if .Values.image.nexus3 }}
       imagePullSecrets:
